# cumulus

./: .gitignore
presentation/reveal.js-master/: index.html
project_plan/: proj_plan.tex
report/: cumulus.tex
src/: CMakeLists.txt
src/cmake/: FindGLEW.cmake  FindGLFW.cmake  FindGLUT.cmake  FindMaya.cmake  funcs.cmake
src/core/: CMakeLists.txt  coregl.cpp  coregl.h  fbo.cpp  fbo.h  glincludes.h  loadobj.cpp  loadobj.h  model.cpp  model.h  objloader.cpp  objloader.h  shadermanager.cpp  shadermanager.h  simplexnoise1234.c  simplexnoise1234.h  utils.h  volume.cpp  volume.h
src/core/shaders/: basic.frag  basic.vert  color_cube.frag  color_cube.vert  textureToScreen.frag
src/glrender/: CMakeLists.txt  cam.cpp  cam.h  camera.cpp  camera.h  main.cpp
src/hello/: CMakeLists.txt  hello.cpp
src/mayarender/: CMakeLists.txt  cloud_node.cpp  cloud_node.h  clouddrawoverride.cpp  clouddrawoverride.h  coregl.cpp  fbo.cpp  fbo.h  glincludes.h  objloader.h  pluginMain.cpp  shadermanager.h  simplexnoise1234.cpp  test.h
src/mayashader/: CMakeLists.txt  cumulusshader.cpp  cumulusshader.h
